lib/src/compiler/tests/testdata/errors/32.out
error[E003]: mismatching types
 --> line:4:7
  |
4 |       n == "3"
  |       ^ this expression is `integer`
  |            ^^^ this expression is `string`
  |